testsuite/tests/deriving/should_fail/T10598_fail3.stderr

T10598_fail3.hs:9:36: error: [GHC-07214]
    • Generic instances can only be derived in Safe Haskell using the stock strategy.
    • In the instance declaration for ‘Generic T’
